# embb

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPYING.md  COPYING.txt  EMBBConfig.cmake.in  README.md  README.txt  UseEMBB.cmake.in  _config.yml  cookie_policy.html  corporate_information.html  faq.html  get_started.html  index.html  keep_in_touch.html  learn_more.html  news.html  partest.tar  privacy_policy.html  terms_of_use.html
algorithms_cpp/: CMakeLists.txt
algorithms_cpp/perf/: count_perf-inl.h  count_perf.h  for_each_perf-inl.h  for_each_perf.h  index_iterator.h  main.cc  merge_sort_perf-inl.h  merge_sort_perf.h  quick_sort_perf-inl.h  quick_sort_perf.h  reduce_perf-inl.h  reduce_perf.h  scan_perf-inl.h  scan_perf.h
algorithms_cpp/src/: dummy.cc  execution_policy.cc
algorithms_cpp/test/: count_test.cc  count_test.h  for_each_test.cc  for_each_test.h  invoke_test.cc  invoke_test.h  main.cc  merge_sort_test.cc  merge_sort_test.h  partitioner_test.cc  partitioner_test.h  quick_sort_test.cc  quick_sort_test.h  reduce_test.cc  reduce_test.h  scan_test.cc  scan_test.h  zip_iterator_test.cc  zip_iterator_test.h
base_c/: CMakeLists.txt
base_c/src/: atomic.c  atomicfunc_32.asm  atomicfunc_64.asm  condition_variable.c  core_set.c  counter.c  duration.c  exports_32.def  exports_64.def  log.c  memory_allocation.c  mutex.c  rwlock.c  shared_mutex.c  thread.c  thread_specific_storage.c  time.c
base_c/test/: README.txt  alloc_test.cc  alloc_test.h  atomic_test.cc  atomic_test.h  condition_var_test.cc  condition_var_test.h  core_set_test.cc  core_set_test.h  counter_test.cc  counter_test.h  duration_test.cc  duration_test.h  main.cc  mutex_test.cc  mutex_test.h  rwlock_test.cc  rwlock_test.h  shared_mutex_test.cc  shared_mutex_test.h  thread_index_test.cc  thread_index_test.h  thread_specific_storage_test.cc  thread_specific_storage_test.h  thread_test.cc  thread_test.h  time_test.cc  time_test.h
base_cpp/: CMakeLists.txt
base_cpp/src/: condition_variable.cc  core_set.cc  duration.cc  exports_32.def  exports_64.def  function.cc  functionN.lua  log.cc  memory_allocation.cc  mutex.cc  rwlock.cc  shared_mutex.cc  thread.cc  time.cc
base_cpp/test/: atomic_test.cc  atomic_test.h  condition_var_test.cc  condition_var_test.h  core_set_test.cc  core_set_test.h  duration_test.cc  duration_test.h  log_test.cc  log_test.h  main.cc  memory_allocation_test.cc  memory_allocation_test.h  mutex_test.cc  mutex_test.h  rwlock_test.cc  rwlock_test.h  shared_mutex_test.cc  shared_mutex_test.h  thread_specific_storage_test.cc  thread_specific_storage_test.h  thread_test.cc  thread_test.h  time_test.h
containers_cpp/: CMakeLists.txt
containers_cpp/generator/: CMakeLists.txt  chromatic_tree_generator.cc  chromatic_tree_operations.h
containers_cpp/src/: dummy.cc
containers_cpp/test/: blocking_container_test-inl.h  blocking_container_test.h  blocking_map_test-inl.h  blocking_map_test.h  blocking_push_and_pop_container_test-inl.h  blocking_push_and_pop_container_test.h  blocking_queue_test-inl.h  blocking_queue_test.h  blocking_stack_test-inl.h  blocking_stack_test.h  hazard_pointer_test.cc  hazard_pointer_test.h  llx_scx_test.cc  llx_scx_test.h  main.cc  map_test-inl.h  map_test.h  multiset_test.cc  multiset_test.h  object_pool_test-inl.h  object_pool_test.cc  object_pool_test.h  pool_test-inl.h  pool_test.h  queue_test-inl.h  queue_test.h  set_test-inl.h  set_test.h  stack_test-inl.h  stack_test.h  tree_test-inl.h  tree_test.h
doc/examples/: CMakeLists.txt  insert_snippets.py  main.cc
doc/tutorial/: CMakeLists.txt  bake_tutorial.py  bakemd.py  customize.tex  pandoc.css  references.bib  tutorial.template.md  tutorial.tex  tutorial.yml  tutorial_raw.md
linearizability_tester/: CMakeLists.txt  README.txt  lt.cc  main.cc
linearizability_tester/src/: linearizability_tester.h  sequential_data_structures.h  tests.h  tests.h.gch
mtapi_c/: CMakeLists.txt
mtapi_c/include/: mtapi.h  mtapi_ext.h
mtapi_c/src/: embb_mtapi_action_plugin_t.c  embb_mtapi_action_t.c  embb_mtapi_action_t.h  embb_mtapi_action_t_fwd.h  embb_mtapi_alloc.c  embb_mtapi_alloc.h  embb_mtapi_attr.c  embb_mtapi_attr.h  embb_mtapi_control_plugin_t.c  embb_mtapi_control_plugin_t.h  embb_mtapi_group_t.c  embb_mtapi_group_t.h  embb_mtapi_group_t_fwd.h  embb_mtapi_id_pool_t.c  embb_mtapi_id_pool_t.h  embb_mtapi_job_t.c  embb_mtapi_job_t.h  embb_mtapi_job_t_fwd.h  embb_mtapi_log.h  embb_mtapi_node_t.c  embb_mtapi_node_t.h  embb_mtapi_node_t_fwd.h  embb_mtapi_pool_template-inl.h  embb_mtapi_pool_template.h  embb_mtapi_queue_t.c  embb_mtapi_queue_t.h  embb_mtapi_queue_t_fwd.h  embb_mtapi_scheduler_t.c  embb_mtapi_scheduler_t.h  embb_mtapi_scheduler_t_fwd.h  embb_mtapi_spinlock_t.c  embb_mtapi_spinlock_t.h  embb_mtapi_task_context_t.c  embb_mtapi_task_context_t.h  embb_mtapi_task_context_t_fwd.h  embb_mtapi_task_queue_t.c  embb_mtapi_task_queue_t.h  embb_mtapi_task_queue_t_fwd.h  embb_mtapi_task_t.c  embb_mtapi_task_t.h  (+13 more)
mtapi_c/test/: embb_mtapi_test_config.h  embb_mtapi_test_error.cc  embb_mtapi_test_error.h  embb_mtapi_test_group.cc  embb_mtapi_test_group.h  embb_mtapi_test_id_pool.cc  embb_mtapi_test_id_pool.h  embb_mtapi_test_init_finalize.cc  embb_mtapi_test_init_finalize.h  embb_mtapi_test_plugin.cc  embb_mtapi_test_plugin.h  embb_mtapi_test_queue.cc  embb_mtapi_test_queue.h  embb_mtapi_test_task.cc  embb_mtapi_test_task.h  main.cc
mtapi_cpp/: CMakeLists.txt
mtapi_cpp/src/: affinity.cc  check_status.cc  continuation.cc  continuationstage.h  execution_policy.cc  exports_32.def  exports_64.def  group.cc  node.cc  queue.cc  task.cc  taskcontext.cc
mtapi_cpp/test/: main.cc  mtapi_cpp_test_config.h  mtapi_cpp_test_error.cc  mtapi_cpp_test_error.h  mtapi_cpp_test_group.cc  mtapi_cpp_test_group.h  mtapi_cpp_test_queue.cc  mtapi_cpp_test_queue.h  mtapi_cpp_test_task.cc  mtapi_cpp_test_task.h
mtapi_network_c/: CMakeLists.txt
mtapi_network_c/src/: embb_mtapi_network.c  embb_mtapi_network.h  embb_mtapi_network_buffer.c  (+3 more)
mtapi_opencl_c/: CMakeLists.txt
tasks_cpp/: CMakeLists.txt
(+633 files in other folders)
